@@ -1,6 +1,6 @@
 /*
  * OpenRemote, the Home of the Digital Home.
- * Copyright 2008-2011, OpenRemote Inc.
+ * Copyright 2008-2013, OpenRemote Inc.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -33,7 +33,7 @@ import org.apache.http.auth.AuthScope;
 import org.apache.http.auth.UsernamePasswordCredentials;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.log4j.Logger;
+import org.openremote.controller.utils.Logger;
 
 /**
  * OpenRemote protocol implementation for the Universal Devices ISY-99 HTTP-to-Insteon Bridge
@@ -169,7 +169,7 @@ public class Isy99Command implements ExecutableCommand, StatusCommand
       }
       else
       {
-        StatusReader.SetLocalStatus(address, command, commandParam);
+        StatusReader.setLocalStatus(address, command, commandParam);
       }
     }
     catch (IOException e)
@@ -184,7 +184,7 @@ public class Isy99Command implements ExecutableCommand, StatusCommand
   @Override
   public String read(EnumSensorType sensorType, Map<String, String> stateMap)
   {
-    String value = StatusReader.GetStatus(address);
+    String value = StatusReader.getStatus(address);
     
     if (value == null || value.equals(""))
     {
